# rag-chat-app

./: LICENSE  README.md  pyproject.toml  rag_utils.py  streamlit_app.py
.github/workflows/: test.yml
tests/: test_rag_utils.py  test_streamlit_app.py
