[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = "A sample project using LLMs, RAG and visualize via Streamlit."
authors = ["Lukas Wölfl <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start = "streamlit run app.py"  # Add an entry point for Streamlit

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=llm_agent --cov-report=xml"  # Generate coverage reports
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain-openai = "^0.3.7"
black = "^25.1.0"
isort = "^6.0.1"
langchain = "^0.3.19"
openai = "^1.65.2"
qdrant-client = "^1.13.2"
pypdf2 = "^3.0.1"
langchain-community = "^0.3.18"
pypdf = "^5.3.0"
streamlit = "^1.42.2"
